--- a/app/templates/add_teacher.html
+++ b/app/templates/add_teacher.html
@@ -48,7 +48,7 @@
         </form>
 
         <div class="text-center mt-2">
-            <a href="{{ url_for('main.login') }}">Back to Login</a>
+            <a href="{{ url_for('main.admin_dashboard') }}">Back </a>
         </div>
     </div>
 </div>
